crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__resize_tests__code_blocks_wide.snap
---
source: crates/crucible-cli/src/tui/testing/resize_tests.rs
expression: h.render()
---
                                                                                
 > Show me some code                                                            
                                                                                
 ● Here's an example:                                                           
   fn main() {                                                                  
       println!("Hello");                                                       
   }                                                                            
   This prints Hello.                                                           
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
