crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__resize_tests__long_conversation_large.snap
---
source: crates/crucible-cli/src/tui/testing/resize_tests.rs
expression: h.render()
---
 ● Response 37                                                                                                          
                                                                                                                        
 > Message 38                                                                                                           
                                                                                                                        
 ● Response 39                                                                                                          
                                                                                                                        
 > Message 40                                                                                                           
                                                                                                                        
 ● Response 41                                                                                                          
                                                                                                                        
 > Message 42                                                                                                           
                                                                                                                        
 ● Response 43                                                                                                          
                                                                                                                        
 > Message 44                                                                                                           
                                                                                                                        
 ● Response 45                                                                                                          
                                                                                                                        
 > Message 46                                                                                                           
                                                                                                                        
 ● Response 47                                                                                                          
                                                                                                                        
 > Message 48                                                                                                           
                                                                                                                        
 ● Response 49                                                                                                          
                                                                                                                        
                                                                                                                        
 >                                                                                                                      
                                                                                                                        
▸ Plan │ ollama/llama3.2 │ Ready
