crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__resize_tests__long_conversation_short.snap
---
source: crates/crucible-cli/src/tui/testing/resize_tests.rs
expression: h.render()
---
 ● Response 47                                                                  
                                                                                
 > Message 48                                                                   
                                                                                
 ● Response 49                                                                  
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ Ready
