crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__resize_tests__narrow_after.snap
---
source: crates/crucible-cli/src/tui/testing/resize_tests.rs
expression: h.render()
---
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
 > Hello                                
                                        
 ● Hi! How can I help?                  
                                        
                                        
 >                                      
                                        
▸ Plan │ Ready
