crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__resize_tests__tall_before.snap
---
source: crates/crucible-cli/src/tui/testing/resize_tests.rs
expression: h.render()
---
                                                                                
 > What is Crucible?                                                            
                                                                                
 ● Crucible is a knowledge management system that combines wikilinks with AI.   
                                                                                
 > How do I search?                                                             
                                                                                
 ● Use the /search command or @ to reference files.                             
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
