crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__resize_tests__tool_calls_narrow.snap
---
source: crates/crucible-cli/src/tui/testing/resize_tests.rs
expression: h.render()
---
                                                  
 > Analyze this codebase                          
                                                  
 ● Let me explore the structure.                  
                                                  
 ● glob → src/**/*.rs - 24 files                  
                                                  
 ● I found 24 Rust files. Let me check the main   
   entry point.                                   
                                                  
 ● read_file → src/main.rs                        
                                                  
 ● The main.rs initializes the CLI. Now checking  
   dependencies.                                  
                                                  
 ● read_file → Cargo.toml                         
                                                  
 ● This project uses tokio for async runtime and  
   clap for CLI parsing.                          
                                                  
                                                  
 >                                                
                                                  
▸ Plan │ Ready
